Atualiza projeto: melhorias frontend/backend, Docker, configurações